<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/timer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/timer_label_size"
        app:layout_constraintBottom_toBottomOf="@id/pb_timer"
        app:layout_constraintEnd_toEndOf="@id/pb_timer"
        app:layout_constraintStart_toStartOf="@id/pb_timer"
        app:layout_constraintTop_toTopOf="@id/pb_timer"
        tools:text="Test TextView" />

    <ProgressBar
        android:id="@+id/pb_timer"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toTopOf="@+id/reps_text_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label"
        tools:progress="75" />

    <TextView
        android:id="@+id/reps_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps_remaining"
        android:textSize="@dimen/description_label_size"
        app:layout_constraintBottom_toTopOf="@id/start_btn"
        app:layout_constraintEnd_toStartOf="@+id/remaining_reps_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pb_timer" />

    <TextView
        android:id="@+id/remaining_reps_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/description_label_size"
        app:layout_constraintBottom_toTopOf="@id/start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reps_text_label"
        app:layout_constraintTop_toBottomOf="@+id/pb_timer"
        tools:text="0" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/pause_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remaining_reps_label"
        tools:text="Start" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/pause_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pause_btn"
        tools:text="Reset" />

    <Button
        android:id="@+id/pause_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reset_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remaining_reps_label"
        tools:text="Pause" />

    <Button
        android:id="@+id/resume_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/reset_btn"
        app:layout_constraintTop_toBottomOf="@id/remaining_reps_label"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="Resume" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/description_label_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name Here"/>


</androidx.constraintlayout.widget.ConstraintLayout>